@@ -1,8 +1,9 @@
 June 2015
-  - Requires PHP > 5.4.26
   - Microsoft IE 8 no longer supported
   - Security: added CSRF protection
   - Zarafa users: allow to change display format of "Send As"
+  - LAM Pro:
+   -> Password Self Reset: added 389 Directory Server schema file
 
 
 31.03.2015 4.9
